NetBSD Problem Report #53713

From www@NetBSD.org  Fri Nov  9 10:15:13 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B6B5E7A155
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  9 Nov 2018 10:15:13 +0000 (UTC)
Message-Id: <20181109101512.59D8C7A1C8@mollari.NetBSD.org>
Date: Fri,  9 Nov 2018 10:15:12 +0000 (UTC)
From: ci4ic4@gmail.com
Reply-To: ci4ic4@gmail.com
To: gnats-bugs@NetBSD.org
Subject: firefox 63.0.1 compilation failure on amd64 -current
X-Send-Pr-Version: www-1.0

>Number:         53713
>Category:       pkg
>Synopsis:       firefox 63.0.1 compilation failure on amd64 -current
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    pkg-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 09 10:20:00 +0000 2018
>Closed-Date:    Fri Nov 09 16:25:28 +0000 2018
>Last-Modified:  Fri Nov 09 16:25:28 +0000 2018
>Originator:     Chavdar Ivanov
>Release:        8.99.25 -current as of 2018/11/07, -current.
>Organization:
CI4 Consulting Ltd
>Environment:
NetBSD ymir 8.99.25 NetBSD 8.99.25 (GENERIC) #0: Wed Nov  7 12:20:18 GMT 2018 sysbuild@ymir:/home/sysbuild/sysbuild/amd64/obj/home/sysbuild/src/sys/arch/amd64/compile/GENERIC amd64
>Description:
/usr/pkgsrc/www/firefox/work/.cwrapper/bin/c++ -o IPCMessageTypeName.o -c  -I/usr/pkgsrc/www/firefox/work/build/dist/stl_wrappers -I/usr/
pkgsrc/www/firefox/work/build/dist/system_wrappers -include /usr/pkgsrc/www/firefox/work/firefox-63.0.1/config/gcc_hidden.h -DNDEBUG=1 -D
TRIMMED=1 -DOS_POSIX=1 -DOS_NETBSD=1 -DOS_BSD=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/usr/
pkgsrc/www/firefox/work/firefox-63.0.1/ipc/ipdl -I/usr/pkgsrc/www/firefox/work/build/ipc/ipdl -I/usr/pkgsrc/www/firefox/work/build/ipc/ip
dl/_ipdlheaders -I/usr/pkgsrc/www/firefox/work/firefox-63.0.1/ipc/chromium/src -I/usr/pkgsrc/www/firefox/work/firefox-63.0.1/ipc/glue -I/
usr/pkgsrc/www/firefox/work/build/dist/include -I/usr/pkg/include/nspr -I/usr/pkg/include/nss -I/usr/pkg/include/nspr -I/usr/X11R7/includ
e/pixman-1 -fPIC -DPIC -DMOZILLA_CLIENT -include /usr/pkgsrc/www/firefox/work/build/mozilla-config.h -I/usr/pkg/include -I/usr/include -I
/usr/pkg/include/nspr -I/usr/pkg/include/nss/nss -I/usr/X11R7/include -I/usr/X11R7/include/libdrm -I/usr/pkg/include/glib/glib-2.0 -I/usr
/pkg/include/glib/gio-unix-2.0 -I/usr/pkg/lib/glib-2.0/include -I/usr/pkg/include/ffmpeg4 -I/usr/X11R7/include/freetype2 -U_FORTIFY_SOURC
E -D_FORTIFY_SOURCE=2 -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreach
able-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-
error=array-bounds -Wno-error=free-nonheap-object -Wformat -fno-sized-deallocation -O2 -I/usr/pkg/include/nspr -D_GLIBCXX_INCLUDE_NEXT_C_
HEADERS -I/usr/pkg/include -I/usr/include -I/usr/pkg/include/nss/nss -I/usr/X11R7/include -I/usr/X11R7/include/libdrm -I/usr/pkg/include/
glib/glib-2.0 -I/usr/pkg/include/glib/gio-unix-2.0 -I/usr/pkg/lib/glib-2.0/include -I/usr/pkg/include/ffmpeg4 -I/usr/X11R7/include/freety
pe2 -D__HAVE_INLINE___ISINF -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fno-exceptions -fno-strict-aliasing -Dunix -fno-rtti -ffunction-sectio
ns -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -I/usr/pkg/include -O2 -fomit-frame-pointer -I/usr/pkgsrc/www/firefox/w
ork/firefox-63.0.1/widget/gtk/compat-gtk3 -I/usr/pkg/include/gtk-3.0 -I/usr/pkg/include/pango-1.0 -I/usr/pkg/include/glib/glib-2.0 -I/usr
/pkg/lib/glib-2.0/include -I/usr/pkg/include -I/usr/pkg/include/fribidi -I/usr/pkg/include/cairo -I/usr/X11R7/include/pixman-1 -I/usr/X11
R7/include -I/usr/X11R7/include/freetype2 -I/usr/pkg/include/libpng16 -I/usr/pkg/include/harfbuzz -I/usr/pkg/include/gdk-pixbuf-2.0 -D_RE
ENTRANT -I/usr/pkg/include/glib/gio-unix-2.0/ -D_REENTRANT -I/usr/pkg/include/atk-1.0 -I/usr/pkg/include/at-spi2-atk/2.0 -I/usr/pkg/inclu
de/at-spi-2.0 -I/usr/pkg/include/dbus-1.0 -I/usr/pkg/lib/dbus-1.0/include -I/usr/pkg/include/gtk-3.0/unix-print -D_REENTRANT -D_REENTRANT
 -D_REENTRANT -D_REENTRANT -pthread  -MD -MP -MF .deps/IPCMessageTypeName.o.pp   /usr/pkgsrc/www/firefox/work/build/ipc/ipdl/IPCMessageTy
peName.cpp
In file included from /usr/pkgsrc/www/firefox/work/build/dist/system_wrappers/netinet/in.h:3:0,
                 from /usr/pkg/include/nspr/prinet.h:38,
                 from /usr/pkgsrc/www/firefox/work/.buildlink/include/nspr/prio.h:19,
                 from /usr/pkgsrc/www/firefox/work/build/dist/system_wrappers/prio.h:3,
                 from /usr/pkgsrc/www/firefox/work/build/dist/include/nsExceptionHandler.h:24,
                 from /usr/pkgsrc/www/firefox/work/build/dist/include/ipc/IPCMessageUtils.h:32,
                 from /usr/pkgsrc/www/firefox/work/build/dist/include/mozilla/ipc/ByteBuf.h:14,
                 from /usr/pkgsrc/www/firefox/work/build/dist/include/mozilla/ipc/ProtocolUtils.h:21,
                 from /usr/pkgsrc/www/firefox/work/build/ipc/ipdl/IPCMessageTypeName.cpp:5:
/usr/pkgsrc/www/firefox/work/build/ipc/ipdl/IPCMessageTypeName.cpp:8:12: error: 'std::__uint32_t' has not been declared
 using std::uint32_t;
            ^
gmake[3]: *** [/usr/pkgsrc/www/firefox/work/firefox-63.0.1/config/rules.mk:1112: IPCMessageTypeName.o] Error 1
gmake[3]: Leaving directory '/usr/pkgsrc/www/firefox/work/build/ipc/ipdl'
gmake[2]: *** [/usr/pkgsrc/www/firefox/work/firefox-63.0.1/config/recurse.mk:74: ipc/ipdl/target] Error 2
gmake[2]: Leaving directory '/usr/pkgsrc/www/firefox/work/build'
gmake[1]: *** [/usr/pkgsrc/www/firefox/work/firefox-63.0.1/config/recurse.mk:34: compile] Error 2
gmake[1]: Leaving directory '/usr/pkgsrc/www/firefox/work/build'
gmake: *** [/usr/pkgsrc/www/firefox/work/firefox-63.0.1/config/rules.mk:432: all] Error 2
*** Error code 2

Stop.
>How-To-Repeat:
Try to build firefox 63.0.1 on a -current amd64 system.

This was attempted twice; the second try was on a system with small number of packages.

The compiler in use was the system's gcc:

gcc (nb3 20180905) 6.4.0.


>Fix:
N/A

>Release-Note:

>Audit-Trail:
From: "Maya Rashish" <maya@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53713 CVS commit: src/sys/netinet
Date: Fri, 9 Nov 2018 11:46:28 +0000

 Module Name:	src
 Committed By:	maya
 Date:		Fri Nov  9 11:46:28 UTC 2018

 Modified Files:
 	src/sys/netinet: in.h

 Log Message:
 Use the same type redefinition guards as stdint.h since rev1.8

 PR pkg/53713


 To generate a diff of this commit:
 cvs rdiff -u -r1.107 -r1.108 src/sys/netinet/in.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Chavdar Ivanov <ci4ic4@gmail.com>
To: gnats-bugs@NetBSD.org, pkg-manager@netbsd.org, gnats-admin@netbsd.org,
 pkgsrc-bugs@netbsd.org
Cc: 
Subject: Re: PR/53713 CVS commit: src/sys/netinet
Date: Fri, 9 Nov 2018 14:49:23 +0000

 On 11/09/18 11:50, Maya Rashish wrote:
 > The following reply was made to PR pkg/53713; it has been noted by GNATS.
 >
 > From: "Maya Rashish" <maya@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc:
 > Subject: PR/53713 CVS commit: src/sys/netinet
 > Date: Fri, 9 Nov 2018 11:46:28 +0000
 >
 >   Module Name:	src
 >   Committed By:	maya
 >   Date:		Fri Nov  9 11:46:28 UTC 2018
 >   
 >   Modified Files:
 >   	src/sys/netinet: in.h
 >   
 >   Log Message:
 >   Use the same type redefinition guards as stdint.h since rev1.8
 >   
 >   PR pkg/53713
 >   
 >   
 >   To generate a diff of this commit:
 >   cvs rdiff -u -r1.107 -r1.108 src/sys/netinet/in.h
 >   
 >   Please note that diffs are not public domain; they are subject to the
 >   copyright notices on the relevant files.
 >   
 Thanks for the quick resolution. Firefox 63.0.1 now builds fine under 
 -current and seems to be working OK (at least not worse than 62.x was 
 before).

State-Changed-From-To: open->closed
State-Changed-By: bsiegert@NetBSD.org
State-Changed-When: Fri, 09 Nov 2018 16:25:28 +0000
State-Changed-Why:
Submitter says this is fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.