Use the same type redefinition guards as stdint.h since rev1.8

PR pkg/53713